# sentry-package-metadata

./: .gitignore  Cargo.toml  README.md  meson.build  meson.options
scripts/: gen-package-metadata.py  meson-postconf.py
src/: lib.rs
